--- a/Node 2/Makefile
+++ b/Node 2/Makefile
@@ -1,8 +1,8 @@
 # List all source files to be compiled; separate with space
-SOURCE_FILES := main.c uart.c ADC.c setup.h SPI.c MCP.c CAN.c pwm.c game.c DAC.c TWI_Master.c controller.c
+SOURCE_FILES := main.c uart.c ADC.c setup.h SPI.c MCP.c CAN.c pwm.c game.c DAC.c TWI_Master.c controller.c solenoid.c
 
 # Set this flag to "yes" (no quotes) to use JTAG; otherwise ISP (SPI) is used
-PROGRAM_WITH_JTAG := yes
+PROGRAM_WITH_JTAG := no
 
 # Feel free to ignore anything below this line
 PROGRAMMER := atmelice_isp
