spillet funker sånn halvveis

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,7 @@
 {
     "files.associations": {
-        "twi_master.h": "c"
+        "twi_master.h": "c",
+        "setup.h": "c",
+        "joystick.h": "c"
     }
 }
