--- a/Node 2/Makefile
+++ b/Node 2/Makefile
@@ -1,5 +1,5 @@
 # List all source files to be compiled; separate with space
-SOURCE_FILES := main.c uart.c ADC.c setup.h SPI.c MCP.c CAN.c pwm.c game.c DAC.c TWI_Master.c controller.c solenoid.c
+SOURCE_FILES := main.c uart.c ADC.c setup.h SPI.c MCP.c CAN.c pwm.c game.c DAC.c TWI_Master.c controller.c solenoid.c music.c note.h song.h
 
 # Set this flag to "yes" (no quotes) to use JTAG; otherwise ISP (SPI) is used
 PROGRAM_WITH_JTAG := no
